[package]
name = "colosseum-server"
version = "0.1.0"
authors = ["Chay Nabors <chaynabors@gmail.com>"]
edition = "2018"

[dependencies]
colosseum = { package = "colosseum-core", path = "../colosseum-core" }
redis = "0.17.0"
tokio = { version = "0.3.4", features = ["io-util", "net", "rt-multi-thread", "sync"] }
